service.yaml
apiVersion: v1
kind: Service
metadata:
  name: una-service
spec:
  type: ClusterIP
  selector:
    app: una-color-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
