ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: una-assignment-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: una.assignment.apps.k3s.zauqilab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: una-assignment-service
            port:
              number: 80
